--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,16 @@
 <!doctype html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title>Sakai - PrimeNG</title>
-        <base href="/" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.o" />
-        <link rel="preconnect" href="https://primefaces.org" />
-        <link rel="icon" type="image/x-icon" href="https://primefaces.org/cdn/primeng/images/favicon.png" />
-        <link href="https://fonts.cdnfonts.com/css/lato" rel="stylesheet" />
-    </head>
-
-    <body>
-        <app-root></app-root>
-    </body>
+<html lang="pt-BR">
+<head>
+  <meta charset="utf-8">
+  <title>Sistema de Eventos</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+</head>
+<body>
+  <app-root></app-root>
+</body>
 </html>
+
